--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,10 @@
     --transition-speed: 0.3s;
   }
   
+  html {
+    scroll-behavior: smooth;
+  }
+  
   * {
     margin: 0;
     padding: 0;
@@ -43,6 +47,7 @@
     display: block;
     width: 100%;
     padding-bottom: 15px;
+    scroll-margin-top: 100px;
   }
   
   .container > h2::after {
@@ -765,6 +770,7 @@
     background-color: var(--header-bg);
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     padding: 15px 0;
+    height: 60px;
   }
   
   .nav-links {
@@ -939,7 +945,7 @@
   }
   
   .recommendation-item::before {
-    content: '"';
+    /* content: '"'; */
     position: absolute;
     top: 20px;
     left: 20px;
